[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/WaveControl.gd" type="Script" id=1]

[node name="WaveControl" type="VBoxContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = -316.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="WaveNav" type="HBoxContainer" parent="."]
margin_right = 196.0
margin_bottom = 20.0

[node name="Prev" type="Button" parent="WaveNav"]
margin_right = 30.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )
text = "<"

[node name="WaveLvl" type="Label" parent="WaveNav"]
margin_left = 34.0
margin_top = 3.0
margin_right = 159.0
margin_bottom = 17.0
rect_min_size = Vector2( 125, 0 )
text = "Wave 1"
align = 1

[node name="Next" type="Button" parent="WaveNav"]
margin_left = 163.0
margin_right = 193.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
text = ">"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 24.0
margin_right = 196.0
margin_bottom = 44.0

[node name="WaveProgress" type="ProgressBar" parent="HBoxContainer"]
margin_right = 196.0
margin_bottom = 20.0
rect_min_size = Vector2( 196, 20 )

[node name="SpawnTrigger" type="Timer" parent="."]

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 48.0
margin_right = 196.0
margin_bottom = 88.0
alignment = 1

[node name="FarmingMode" type="CheckButton" parent="HBoxContainer2"]
margin_left = 8.0
margin_right = 188.0
margin_bottom = 40.0
focus_mode = 0
text = "Farming mode: "
